edited to have file names the same as Bryan's files

--- a/notebooks/exploratory/1_LEF_download_cfs.ipynb
+++ b/notebooks/exploratory/1_LEF_download_cfs.ipynb
@@ -476,7 +476,7 @@
         "    filename = os.path.basename(file) #pulls the filename from the entire path\n",
         "    name, ext = os.path.splitext(filename) #splits the filename at the '.nc' so we can change the filename\n",
         "    # Create new file names for the new files\n",
-        "    new_filename = name + '.GL025' + ext\n",
+        "    new_filename = name + '.cnbs.GL025' + ext\n",
         "    new_netcdf = cut_remap_netcdf(file, mask, download_dir+new_filename, lonlatbox)"
       ]
     }
