--- a/notebooks/exploratory/1_LEF_download_waterlevels.ipynb
+++ b/notebooks/exploratory/1_LEF_download_waterlevels.ipynb
@@ -1,84 +1,53 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "This script downloads water level csvs from the Army Corp website.\n",
-        "\n"
-      ],
       "metadata": {
         "id": "LpMHvqniZ0Jt"
-      }
+      },
+      "source": [
+        "This script downloads water level csvs from the Army Corp website.\n",
+        "\n",
+        "No input files are required.\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "fAOZS2g9lB64"
+      },
+      "outputs": [],
       "source": [
         "# Import libraries\n",
         "import os\n",
         "import urllib.request\n",
+        "from datetime import datetime\n",
+        "from dateutil.relativedelta import relativedelta\n",
         "\n",
         "# I was getting a certificate error when trying to download the file. This makes it work thanks to a stackoverflow suggestion.\n",
         "import ssl\n",
         "ssl._create_default_https_context = ssl._create_unverified_context"
-      ],
-      "metadata": {
-        "id": "fAOZS2g9lB64"
-      },
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Mount my google drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "q-MY7vgptzm5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ace5bf08-c40d-4fa6-ebd6-13cf17b45356"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hnWP6B1mzrnV"
+      },
       "source": [
         "# Defined Functions\n",
         "\n",
         "Function to download the previous month water levels and current month water levels."
-      ],
-      "metadata": {
-        "id": "hnWP6B1mzrnV"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "T9ZLNfbWnvr5"
+      },
+      "outputs": [],
       "source": [
         "def download_waterlevels(month, download_path):\n",
         "\n",
@@ -95,31 +64,61 @@
         "\n",
         "    except Exception as e:\n",
         "        print(f\"An error occurred while trying to download {month} month water levels.\")"
-      ],
-      "metadata": {
-        "id": "T9ZLNfbWnvr5"
-      },
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Begin Script"
-      ],
       "metadata": {
         "id": "_6sYGPZ05hI4"
-      }
+      },
+      "source": [
+        "# Begin Script"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "download_previous = '/content/drive/MyDrive/BIL SA Project/Modeling/Data-driven Modeling/Input datasets/Downloaded Data/previous_month_waterlevels.csv'\n",
-        "download_waterlevels('previous', download_previous)\n",
+        "## User Input\n",
+        "dir = 'C:/Users/fitzpatrick/Desktop/Data/'\n",
         "\n",
-        "download_current = '/content/drive/MyDrive/BIL SA Project/Modeling/Data-driven Modeling/Input datasets/Downloaded Data/current_month_waterlevels.csv'\n",
-        "download_waterlevels('current', download_current)"
+        "## Fixed inputs\n",
+        "today = datetime.today()\n",
+        "month_0 = today.strftime('%m')\n",
+        "year_0 = today.strftime('%Y')\n",
+        "last_month = today - relativedelta(months=1)\n",
+        "month_1 = last_month.strftime('%m')\n",
+        "year_1 = last_month.strftime('%Y')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Directory already exists.\n"
+          ]
+        }
       ],
+      "source": [
+        "today = today.strftime('%Y%m%d')\n",
+        "download_dir = f'{dir}{today}/'\n",
+        "if not os.path.exists(download_dir):\n",
+        "    os.makedirs(download_dir)\n",
+        "    print(\"Directory created.\")\n",
+        "else:\n",
+        "    print(\"Directory already exists.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -127,16 +126,46 @@
         "id": "ZlrTipMLlSSi",
         "outputId": "8e72e7ae-1c6f-4344-ff74-37439ec7adf6"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "previous month water levels downloaded successfully.\n",
             "current month water levels downloaded successfully.\n"
           ]
         }
+      ],
+      "source": [
+        "previous_filename = f'USACE_waterlevels_{year_1}{month_1}.csv'\n",
+        "download_waterlevels('previous', download_dir+previous_filename)\n",
+        "\n",
+        "current_filename = f'USACE_waterlevels_{year_0}{month_0}.csv'\n",
+        "download_waterlevels('current', download_dir+current_filename)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
