simplifying for mvp

--- a/notebooks/exploratory/2_LEF_BM_preprocess_cfs.ipynb
+++ b/notebooks/exploratory/2_LEF_BM_preprocess_cfs.ipynb
@@ -6,28 +6,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cf\n",
-    "import cartopy.feature as cfeature\n",
-    "from matplotlib import pyplot as plt\n",
-    "from matplotlib.offsetbox import AnchoredText\n",
     "import netCDF4 as nc\n",
     "import numpy as np\n",
-    "import math\n",
-    "import csv\n",
     "from cdo import *\n",
     "import os\n",
     "import calendar\n",
     "import xarray as xr\n",
-    "import sys\n",
     "from datetime import datetime, timedelta\n",
     "from dateutil.relativedelta import relativedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defined constants based on today's date and not required as input from the user\n",
+    "today = datetime.today().strftime('%Y%m%d')\n",
+    "yesterday = (datetime.today() - timedelta(days=1))\n",
+    "year_0 = yesterday.year\n",
+    "month_0 = yesterday.month\n",
+    "yesterday_str = yesterday.strftime('%Y%m%d')\n",
+    "\n",
+    "# Which daily CFS run cycles would we like to download, process, and add to our csv basin files\n",
+    "utc = ['00','06','12','18']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## USER INPUTS ##\n",
+    "dir = f'C:/Users/fitzpatrick/Desktop/Data/{today}/'\n",
+    "mask_file = 'C:/Users/fitzpatrick/Desktop/Data/Input/GL_mask.nc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,36 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defined constants based on today's date and not required as input from the user\n",
-    "today = datetime.today().strftime('%Y%m%d')\n",
-    "yesterday = (datetime.today() - timedelta(days=1))\n",
-    "year_0 = yesterday.year\n",
-    "month_0 = yesterday.month\n",
-    "yesterday_str = yesterday.strftime('%Y%m%d')\n",
-    "\n",
-    "# Which daily CFS run cycles would we like to download, process, and add to our csv basin files\n",
-    "utc = ['00','06','12','18']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inputs from the user\n",
-    "dir = f'C:/Users/fitzpatrick/Desktop/Data/{today}/'\n",
-    "process_dir = f'{dir}/CFS/processed/'\n",
-    "mask_file = 'C:/Users/fitzpatrick/Desktop/Data/Input/GL_mask.nc'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,10 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pull the lat/lon from the mask file and calculate the grid cell areas\n",
     "ds_mask = nc.Dataset(mask_file)\n",
     "lat = ds_mask.variables['latitude'][:]\n",
     "lon = ds_mask.variables['longitude'][:]\n",
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +196,7 @@
    "source": [
     "## This section pulls APCP data from the PGB files\n",
     "## ACPC_surface is in kg/m2\n",
+    "process_dir = f'{dir}/CFS/processed/'\n",
     "\n",
     "# Find all the files the pgb files in the directory\n",
     "file_list = get_files(process_dir, 'starts', 'pgb')\n",
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
