more efficient processing script using cfgrid

--- a/notebooks/exploratory/0_LEF_model_training.ipynb
+++ b/notebooks/exploratory/0_LEF_model_training.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Training Script\n",
+    "Lindsay Fitzpatrick\n",
+    "ljob@umich.edu\n",
+    "08/19/2024\n",
+    "\n",
+    "This script reads in CFSR data from 1979 - 2010 and trains different machine learning\n",
+    "models to predict water levels across the 5 Great Lakes simultaeously."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -20,15 +33,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "User Input"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## USER INPUTS ##\n",
-    "\n",
     "# This is the directory where the CFSR and GLCC files are located\n",
     "dir = 'C:/Users/fitzpatrick/Desktop/Data/Input/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the 3 CSV files with CFSR input data"
    ]
   },
   {
@@ -45,6 +70,13 @@
     "\n",
     "## Read in TMP data from CFSR\n",
     "data_3 = pd.read_csv(dir+'CFSR_TMP_Basin_Avgs.csv',sep=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the GLCC RNBS CSV file"
    ]
   },
   {
@@ -89,13 +121,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we prepare the data for training and testing. We set the features 'X' as total over lake\n",
+    "precipitation, total over lake evaporation, and the average air temperature over each lake. The\n",
+    "targets 'y' are RNBS for each lake simultaeously."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare the data for training/testing\n",
-    "\n",
     "# Features\n",
     "X = pd.DataFrame({\n",
     "    'su_pcp': data_1['WaterSuperior'],\n",
@@ -135,6 +174,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split the data into training and testing data sets. We could do it as a random 80/20 split\n",
+    "but instead we set split the data set by date ranges. This can easily be adjusted."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -151,14 +198,37 @@
     "X_train = X[train_start_date:train_end_date]\n",
     "y_train = y[train_start_date:train_end_date]\n",
     "X_test = X[val_start_date:val_end_date]\n",
-    "y_test = y[val_start_date:val_end_date]\n",
-    "\n",
+    "y_test = y[val_start_date:val_end_date]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is best practice to standardize the data from 0-1 before training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Standardize the data\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "y_train_scaled = scaler.fit_transform(y_train)\n",
     "X_test_scaled = scaler.fit_transform(X_test)\n",
     "y_test_scaled = scaler.fit_transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "Below we train different models using the same data and calculate the r squared values on the \n",
+    "test data to compare performance."
    ]
   },
   {
