editing the scripts and formatting

--- a/notebooks/exploratory/2_LEF_BM_preprocess_cfs.ipynb
+++ b/notebooks/exploratory/2_LEF_BM_preprocess_cfs.ipynb
@@ -16,7 +16,6 @@
     "import numpy as np\n",
     "import math\n",
     "import csv\n",
-    "from cdo import *\n",
     "import os\n",
     "import calendar\n",
     "import xarray as xr\n",
@@ -125,11 +124,15 @@
    "outputs": [],
    "source": [
     "# Defined constants based on today's date and not required as input from the user\n",
-    "today = datetime.today().strftime('%Y%m%d')\n",
-    "yesterday = (datetime.today() - timedelta(days=1))\n",
+    "#today = datetime.today().strftime('%Y%m%d')\n",
+    "#yesterday = (datetime.today() - timedelta(days=1))\n",
+    "\n",
+    "date = '2024-08-03'\n",
+    "yesterday = datetime.strptime(date, '%Y-%m-%d')\n",
     "year_0 = yesterday.year\n",
     "month_0 = yesterday.month\n",
     "yesterday_str = yesterday.strftime('%Y%m%d')\n",
+    "\n",
     "\n",
     "# Which daily CFS run cycles would we like to download, process, and add to our csv basin files\n",
     "utc = ['00','06','12','18']"
@@ -142,8 +145,8 @@
    "outputs": [],
    "source": [
     "# Inputs from the user\n",
-    "dir = f'C:/Users/fitzpatrick/Desktop/Data/{today}/'\n",
-    "process_dir = f'{dir}/CFS/processed/'\n",
+    "dir = f'C:/Users/fitzpatrick/Desktop/Data/{yesterday_str}/'\n",
+    "process_dir = f'{dir}CFS/processed/'\n",
     "mask_file = 'C:/Users/fitzpatrick/Desktop/Data/Input/GL_mask.nc'"
    ]
   },
@@ -186,18 +189,449 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\fitzpatrick\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xarray\\backends\\plugins.py:80: RuntimeWarning: Engine 'cfgrib' loading failed:\n",
-      "Cannot find the ecCodes library\n",
-      "  warnings.warn(f\"Engine {name!r} loading failed:\\n{ex}\", RuntimeWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "1\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "2\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "3\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "4\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "5\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "6\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "7\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "8\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "9\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "0\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "1\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "2\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "3\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "4\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "5\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "6\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "7\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "8\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "9\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "0\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "1\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "2\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "3\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "4\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "5\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "6\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "7\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "8\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "9\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "0\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "1\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "2\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "3\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "4\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "5\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "6\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "7\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "8\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
+      "9\n",
+      "eri_lake\n",
+      "eri_land\n",
+      "hur_lake\n",
+      "hur_land\n",
+      "ont_lake\n",
+      "ont_land\n",
+      "mic_lake\n",
+      "mic_land\n",
+      "sup_lake\n",
+      "sup_land\n",
       "CSV created with precipitation data.\n"
      ]
     }
@@ -222,15 +656,17 @@
     "    cfs_run = file_parts[2]\n",
     "\n",
     "    for forecast in range(0,10):\n",
+    "        print(forecast)\n",
     "        for mask_name in mask_variable:\n",
-    "            mask = ds_mask.variables[mask_name][:]\n",
+    "            print(mask_name)\n",
+    "            mask_var = ds_mask.variables[mask_name][:]\n",
     "            df_apcp_forecasts.loc[index, 'cfs_run'] = cfs_run\n",
     "            fmonth = yesterday + relativedelta(months=forecast)\n",
     "            fmonth_year = fmonth.strftime('%Y')\n",
     "            fmonth_num = fmonth.strftime('%m')\n",
     "            df_apcp_forecasts.loc[index, 'forecast_year'] = fmonth_year\n",
     "            df_apcp_forecasts.loc[index, 'forecast_month'] = fmonth_num\n",
-    "            pcp_sum = np.sum(apcp[forecast,:,:]*area*mask*4*31) \n",
+    "            pcp_sum = np.sum(apcp[forecast,:,:]*area*mask_var*4*31) \n",
     "            #pcp_avg = pcp_sum / np.sum(area*mask)\n",
     "            df_apcp_forecasts.loc[index, mask_name] = pcp_sum.data #pcp_avg.data\n",
     "            \n",
@@ -321,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
