cleaned up scripts and add yaml file

--- a/notebooks/exploratory/0_LEF_model_training_cms.ipynb
+++ b/notebooks/exploratory/0_LEF_model_training_cms.ipynb
@@ -20,8 +20,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
@@ -278,9 +276,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            su_rnbs  er_rnbs  on_rnbs  mh_rnbs\n",
+      "1979-01-01   -640.0    890.0   1700.0   1770.0\n",
+      "1979-02-01   1140.0   1530.0    700.0   1920.0\n",
+      "1979-03-01   4280.0   2640.0   3200.0  10210.0\n",
+      "1979-04-01   5620.0   3090.0   3210.0  11910.0\n",
+      "1979-05-01   7660.0   1410.0   1470.0   8090.0\n",
+      "...             ...      ...      ...      ...\n",
+      "2010-08-01   2330.0   -800.0    180.0   1110.0\n",
+      "2010-09-01   2340.0  -1010.0    150.0   1000.0\n",
+      "2010-10-01  -1040.0   -430.0    830.0  -2070.0\n",
+      "2010-11-01    120.0   -100.0   1050.0   -630.0\n",
+      "2010-12-01  -1630.0      0.0   1240.0   -130.0\n",
+      "\n",
+      "[384 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Features\n",
     "X = pd.DataFrame({\n",
@@ -317,7 +336,9 @@
     "merged_df = pd.merge(X, rnbs, left_index=True, right_index=True, how='inner')\n",
     "\n",
     "# Pull the target variables back out \n",
-    "y = merged_df[['su_rnbs', 'er_rnbs', 'on_rnbs', 'mh_rnbs']]"
+    "y = merged_df[['su_rnbs', 'er_rnbs', 'on_rnbs', 'mh_rnbs']]\n",
+    "\n",
+    "print(y)"
    ]
   },
   {
@@ -349,6 +370,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X_train: (312, 12)\n",
+      "Shape of y_train: (312, 4)\n",
+      "Shape of X_test: (72, 12)\n",
+      "Shape of y_test: (72, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify shapes\n",
+    "print(\"Shape of X_train:\", X_train.shape)\n",
+    "print(\"Shape of y_train:\", y_train.shape)\n",
+    "print(\"Shape of X_test:\", X_test.shape)\n",
+    "print(\"Shape of y_test:\", y_test.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,16 +402,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(312, 12)\n",
+      "(72, 12)\n"
+     ]
+    }
+   ],
    "source": [
     "# Standardize the data\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "y_train_scaled = scaler.fit_transform(y_train)\n",
-    "X_test_scaled = scaler.fit_transform(X_test)\n",
-    "y_test_scaled = scaler.fit_transform(y_test)"
+    "x_scaler = StandardScaler()\n",
+    "y_scaler = StandardScaler()\n",
+    "X_train_scaled = x_scaler.fit_transform(X_train)\n",
+    "X_test_scaled = x_scaler.fit_transform(X_test)\n",
+    "y_train_scaled = y_scaler.fit_transform(y_train)\n",
+    "y_test_scaled = y_scaler.fit_transform(y_test)\n",
+    "\n",
+    "print(X_train_scaled.shape)\n",
+    "print(X_test_scaled.shape)"
    ]
   },
   {
@@ -380,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +470,8 @@
     "\n",
     "# Save the trained model\n",
     "joblib.dump(gpr, 'GP_trained_model.joblib')\n",
+    "joblib.dump(x_scaler, 'x_scaler.joblib')\n",
+    "joblib.dump(y_scaler, 'y_scaler.joblib')\n",
     "\n",
     "# Predictions\n",
     "y_pred, sigma = gpr.predict(X_test_scaled, return_std=True)\n",
