--- a/notebooks/exploratory/1_LEF_download_preprocess_cfs_cms.ipynb
+++ b/notebooks/exploratory/1_LEF_download_preprocess_cfs_cms.ipynb
@@ -9,12 +9,17 @@
     "ljob@umich.edu\n",
     "08/28/2024\n",
     "\n",
-    "This script reads downloads CFS forecast data from the AWS as grib2 files. It then opens the grib2 files, calculates total basin, lake, and land, precipitation, evaporation, and average 2m air temperature. These calculations are then added to the running CSV files. This script needs the following files:\n",
+    "This script:\n",
+    "1. Downloads CFS forecast data from the AWS as grib2 files. \n",
+    "2. Opens the grib2 files, calculates total basin, lake, and land, precipitation, evaporation, and average 2m air temperature. \n",
+    "3. These calculations are then added to the CSV files. \n",
+    "\n",
+    "This script needs the following files:\n",
     "\n",
     "- GL_mask.nc\n",
-    "- CFS_EVAP_forecasts_Sums.csv\n",
-    "- CFS_PCP_forecasts_Sums.csv\n",
-    "- CFS_TMP_forecasts_Avgs.csv"
+    "- CFS_EVAP_forecasts_Sums_CMS.csv\n",
+    "- CFS_PCP_forecasts_Sums_CMS.csv\n",
+    "- CFS_TMP_forecasts_Avgs_K.csv"
    ]
   },
   {
@@ -45,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +60,9 @@
     "mask_file = dir + 'Input/GL_mask.nc'\n",
     "\n",
     "# Location of existing CSV files or path/name to new CSV files\n",
-    "tmp_csv = dir + 'CFS_TMP_forecasts_Avgs_tmp.csv'\n",
-    "evap_csv = dir + 'CFS_EVAP_forecasts_Sums_tmp.csv'\n",
-    "pcp_csv = dir + 'CFS_PCP_forecasts_Sums_tmp.csv'\n",
+    "tmp_csv = dir + 'CFS_TMP_forecasts_Avgs_K.csv'\n",
+    "evap_csv = dir + 'CFS_EVAP_forecasts_Sums_CMS.csv'\n",
+    "pcp_csv = dir + 'CFS_PCP_forecasts_Sums_CMS.csv'\n",
     "\n",
     "# IF YOU ARE CREATING NEW CSV FILES:\n",
     "# Then you need to define the start and end dates\n",
@@ -166,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,25 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating new files.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "strptime() argument 1 must be str, not datetime.datetime",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df_tmp_forecasts\u001b[38;5;241m.\u001b[39mempty:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCreating new files.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m     start_date \u001b[38;5;241m=\u001b[39m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrptime\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mY-\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mm-\u001b[39;49m\u001b[38;5;132;43;01m%d\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# User input above\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     end_date \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mstrptime(end_date, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# User input above\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# If we are adding to an existing CSV, then pull the last date from the CSV\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;66;03m# and continue from there\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: strptime() argument 1 must be str, not datetime.datetime"
+      "Starting from: 2024-09-03 and continuing through: 2024-09-10\n"
      ]
     }
    ],
@@ -515,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,97 +529,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning 20240831.\n",
-      "Done with flxf.01.2024083100.202408.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202409.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202410.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202411.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202412.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202501.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202502.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202503.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202504.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202505.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083100.202506.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202409.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202410.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202411.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202412.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202501.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202502.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202503.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202504.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202505.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083106.202506.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202409.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202410.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202411.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202412.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202501.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202502.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202503.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202504.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202505.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083112.202506.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202409.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202410.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202411.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202412.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202501.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202502.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202503.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202504.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202505.avrg.grib.grb2\n",
-      "Done with flxf.01.2024083118.202506.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202408.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202409.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202410.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202411.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202412.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202501.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202502.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202503.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202504.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202505.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083100.202506.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202409.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202410.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202411.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202412.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202501.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202502.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202503.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202504.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202505.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083106.202506.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202409.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202410.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202411.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202412.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202501.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202502.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202503.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202504.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202505.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083112.202506.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202409.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202410.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202411.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202412.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202501.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202502.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202503.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202504.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202505.avrg.grib.grb2\n",
-      "Done with pgbf.01.2024083118.202506.avrg.grib.grb2\n",
-      "Done with 20240831.\n"
+      "Beginning 20240903.\n",
+      "Done with 20240903.\n",
+      "Beginning 20240904.\n",
+      "Done with 20240904.\n",
+      "Beginning 20240905.\n",
+      "Done with 20240905.\n",
+      "Beginning 20240906.\n",
+      "Done with 20240906.\n",
+      "Beginning 20240907.\n",
+      "Done with 20240907.\n",
+      "Beginning 20240908.\n",
+      "Done with 20240908.\n",
+      "Beginning 20240909.\n",
+      "Done with 20240909.\n",
+      "Beginning 20240910.\n",
+      "Done with 20240910.\n"
      ]
     }
    ],
@@ -637,10 +563,10 @@
     "        os.makedirs(download_dir)\n",
     "\n",
     "    # Uses AWS to download the grib2 files\n",
-    "    #for utc_time in utc:\n",
-    "    #    for product in products:\n",
-    "    #        folder_path = f'cfs.{date}/{utc_time}/monthly_grib_01/'\n",
-    "    #        download_grb2_aws(product, bucket_name, folder_path, download_dir)\n",
+    "    for utc_time in utc:\n",
+    "        for product in products:\n",
+    "            folder_path = f'cfs.{date}/{utc_time}/monthly_grib_01/'\n",
+    "            download_grb2_aws(product, bucket_name, folder_path, download_dir)\n",
     "\n",
     "    process_grib_files(download_dir, df_tmp_forecasts, df_evap_forecasts, df_pcp_forecasts, mask_lat, mask_lon, mask_ds, mask_variables, area, calculate_evaporation)   \n",
     "    \n",
